--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 # DW2 Translation Helper
-TranslationHelper/Schlüssel/**
-!TranslationHelper/Schlüssel/_HIER DIE GEHEIMEN SCHLÜSSEL ABLEGEN_.txt
-TranslationHelper/2 Englisch Alt/**
-!TranslationHelper/2 Englisch Alt/_HIER ALTE ENGLISCHE DATEIEN ABLEGEN_.txt
-TranslationHelper/1 Englisch Neu/**
-!TranslationHelper/1 Englisch Neu/_HIER NEUE ENGLISCHE DATEIEN ABLEGEN_.txt
-TranslationHelper/3 Deutsch Alt/**
-!TranslationHelper/3 Deutsch Alt/_HIER ALTE DEUTSCHE DATEIEN ABLEGEN_.txt
-TranslationHelper/4 Deutsch Neu (Ergebnis)/**
-!TranslationHelper/4 Deutsch Neu (Ergebnis)/_HIER ENTSTEHT DAS ERGEBNIS - DIE NEUEN DEUTSCHEN DATEIEN_.txt
-TranslationHelper/Logs/**
-!TranslationHelper/Logs/_HIER ENTSTEHEN DIE LOGS_.txt
+#TranslationHelper/Schlüssel/**
+#!TranslationHelper/Schlüssel/_HIER DIE GEHEIMEN SCHLÜSSEL ABLEGEN_.txt
+#TranslationHelper/2 Englisch Alt/**
+#!TranslationHelper/2 Englisch Alt/_HIER ALTE ENGLISCHE DATEIEN ABLEGEN_.txt
+#TranslationHelper/1 Englisch Neu/**
+#!TranslationHelper/1 Englisch Neu/_HIER NEUE ENGLISCHE DATEIEN ABLEGEN_.txt
+#TranslationHelper/3 Deutsch Alt/**
+#!TranslationHelper/3 Deutsch Alt/_HIER ALTE DEUTSCHE DATEIEN ABLEGEN_.txt
+#TranslationHelper/4 Deutsch Neu (Ergebnis)/**
+#!TranslationHelper/4 Deutsch Neu (Ergebnis)/_HIER ENTSTEHT DAS ERGEBNIS - DIE NEUEN DEUTSCHEN DATEIEN_.txt
+#TranslationHelper/Logs/**
+#!TranslationHelper/Logs/_HIER ENTSTEHEN DIE LOGS_.txt
